Fixed firefox/IE research alignment

--- a/2015_version/css/style.css
+++ b/2015_version/css/style.css
@@ -495,6 +495,7 @@ padding-top: 30px;
   padding: 40px 20px;
   background: #ffffff;
   list-style: none;
+  text-align: left;
 }
 .line-pricing-table .pricing-table-wrap ul li.line-head-row {
   font-size: 24px;
